--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Simon</title>
+		<link rel="icon" href="media/icon.jpg" type="image/x-icon">
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 		<link rel="stylesheet" href="">
