--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -6,6 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Simon</title>
 	<link rel="icon" href="media/icon.jpg" type="image/x-icon">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	<link rel="stylesheet" href="">
@@ -13,8 +17,53 @@
 </head>
 
 <body>
-	<h1 id="level-title">Press A Key to Start</h1>
-	<div class="container">
+	<h1 id="level-title">Test Your Memory!! 🤓🤓</h1>
+	<h2 class="hidden" style="color: white; font-family: 'Press Start 2P', cursive;">Refresh the page to re-enter. 🤩</h2>
+
+	<div class="container start-btn">
+		<button type="button" class=" btn-success btn-primary btn-lg" onclick="gameStart()">Click Me!!</button>
+	</div>
+
+	<div class="container quit-btn hidden">
+		<button type="button" class=" btn-danger btn-primary btn-lg" onclick="gameQuit()">Quit</button>
+	</div>
+
+	<div class="container instructions">
+		<p style="color: white; text-align: left;">
+			<br>
+			This game is based on a 90's classic game Simon 
+			<br>
+			which is structured on a memory game palyed by kids.
+			<br>
+			Instruction's to play:
+			<br>
+		</p>
+		<ol style="color: white; text-align: left;">
+			<li>There are 4 buttons, with 4 diffrent colors.</li>
+			<li>At level 1 a button will be highlighted. You have to press button being highlighted and also memorize it.</li>
+			<li>
+				<p>
+					For the nexet level a new button will be highlighted. You have to first press the button highlighted from the previous level and then the current button. 
+					<br>
+					<div style="display: inline-block; margin-left: 40px;">
+						e.g: <br> the button highlighted for level 1: RED, <br>
+						the button highlighted for level 2: YELLOW, <br>
+						the button highlighted for level 3: BLUE, <br>
+						the button highlighted for level 4: RED, <br>
+						<br>
+						if the button highlighted for level 5 is GREEN,  <br>
+						you have to first press the button in the previous order: RED, YELLOW, BLUE, RED and then GREEN.
+					</div>
+				</p>
+			</li>
+			<li>Make sure to press the button in the order itself</li>
+			<li>If you fail to press the button in the shown pattern, game will be terminated.</li>
+			<li>The pattern will keepchanging for each trail.</li>
+			<li>The pattern is being generated randomly, they cannot be predicted.</li>
+		</ol>
+	</div>
+
+	<div class="container hidden game-btn">
 		<div lass="row">
 
 			<div type="button" id="green" class="btn green">
@@ -39,6 +88,15 @@
 
 	</div>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+		integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous">
+	</script>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.js"
 		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
