game btns updated

--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -64,23 +64,23 @@
 	</div>
 
 	<div class="container hidden game-btn">
-		<div lass="row">
+		<div class="row">
 
-			<div type="button" id="green" class="btn green">
+			<div  id="green" class="btn1 green">
 
 			</div>
 
-			<div type="button" id="red" class="btn red">
+			<div id="red" class="btn1 red">
 
 			</div>
 		</div>
 
 		<div class="row">
 
-			<div type="button" id="yellow" class="btn yellow">
+			<div id="yellow" class="btn1 yellow">
 
 			</div>
-			<div type="button" id="blue" class="btn blue">
+			<div id="blue" class="btn1 blue">
 
 			</div>
 
